[package]
name = "take_put_back"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nonempty = "^0.8.1"
petgraph = "^0.6.2"
log = { version = "^0.4.17", features = ["max_level_debug", "release_max_level_warn"] }