[package]
name = "take_put_back"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "A common abstraction of the process of taking some piece out, processing it and then putting it back."
repository = "https://github.com/Cobord/TakePutBack"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nonempty = {version = "^0.8.1"}
petgraph = {version = "^0.6.2", optional = true }
log = { version = "^0.4.17", features = ["max_level_debug", "release_max_level_warn"] }
env_logger = "^0.11.3"

[features]
